# Leetcode

./: .clang-format  1249. Minimum Remove to Make Valid Parentheses.cpp  1963.minimum-number-of-swaps-to-make-the-string-balanced.cpp  2131. Longest Palindrome by Concatenating Two Letter Words.cpp  921. Minimum Add to Make Parentheses Valid.cpp  CMakeLists.txt  main.cpp
Binary Search/: 1802. Maximum Value at a Given Index in a Bounded Array.cpp  2064. Minimized Maximum of Products Distributed to Any Store.cpp
Bit Manipulation/: 1284. Minimum Number of Flips to Convert Binary Matrix to Zero Matrix.cpp  1452. People Whose List of Favorite Companies Is Not a Subset of Another List.cpp  1601. Maximum Number of Achievable Transfer Requests.cpp  1774 v2. Closest Dessert Cost.cpp  1774. Closest Dessert Cost.cpp  2002. Maximum Product of the Length of Two Palindromic Subsequences.cpp
Dynamic Programming/: 1202. Smallest String With Swaps.cpp  121. Best Time to Buy and Sell Stock.cpp  123. Best Time to Buy and Sell Stock III .cpp  1388. Pizza With 3n Slices.cpp  1419. Minimum Number of Frogs Croaking.cpp  188. Best Time to Buy and Sell Stock IV.cpp  198. House Robber.cpp  213. House Robber II.cpp  309. Best Time to Buy and Sell Stock with Cooldown.cpp  337. House Robber III.cpp  376. Wiggle Subsequence.cpp  714. Best Time to Buy and Sell Stock with Transaction Fee.cpp  801. Minimum Swaps To Make Sequences Increasing.cpp
Greedy/: 121. Best Time to Buy and Sell Stock.cpp  122. Best Time to Buy and Sell Stock II.cpp  2136. Earliest Possible Day of Full Bloom.cpp  301. Remove Invalid Parentheses.cpp  309. Best Time to Buy and Sell Stock with Cooldown.cpp  32. Longest Valid Parentheses .cpp  678. Valid Parenthesis String.cpp
Other/: 1685. Sum of Absolute Differences in a Sorted Array.cpp  (+1 more)
(+30 files in other folders)
