cmake_minimum_required(VERSION 3.21)
project(Leetcode)

set(CMAKE_CXX_STANDARD 23)

add_executable(Leetcode main.cpp "2131. Longest Palindrome by Concatenating Two Letter Words.cpp" "2136. Earliest Possible Day of Full Bloom.cpp" 1963.minimum-number-of-swaps-to-make-the-string-balanced.cpp "921. Minimum Add to Make Parentheses Valid.cpp" "1249. Minimum Remove to Make Valid Parentheses.cpp")
