cmake_minimum_required(VERSION 3.21)
project(Leetcode)

set(CMAKE_CXX_STANDARD 23)

add_executable(Leetcode main.cpp "Hash Table/2131. Longest Palindrome by Concatenating Two Letter Words.cpp" "Greedy/2136. Earliest Possible Day of Full Bloom.cpp" "Greedy/1963. Minimum Number of Swaps to Make the String Balanced.cpp" "Greedy/921. Minimum Add to Make Parentheses Valid.cpp" "Greedy/1249. Minimum Remove to Make Valid Parentheses.cpp")
